# introspection-rust-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml  publish.yml  release-please.yml  release-tag.yml
examples/: logfire_dual_export.rs  logfire_introspection.rs  openai_streaming.rs  openai_tool_call.rs  responses_api_features.rs  tasks_files.rs
examples/api/: runtimes.rs
examples/otel/: openai_streaming.rs  openai_tool_call.rs  responses_api_features.rs  run_examples.sh
hooks/: pre-commit
scripts/: run_examples.sh  setup-hooks.sh
src/: client.rs  lib.rs  messages.rs  observation.rs  openai.rs  runner.rs  span_processor.rs  types.rs
src/agui/: event.rs  mod.rs
src/api/: arrow.rs  backoff.rs  error.rs  files.rs  http.rs  mod.rs  paginator.rs  resumable.rs  schemas.rs  shares.rs  sse.rs  tasks.rs  telemetry.rs
src/otel/: logs.rs  mod.rs  observation.rs  openai.rs  span_processor.rs  testing.rs  types.rs
src/resources/: experiments.rs  mod.rs  projects.rs  recipes.rs  repositories.rs  runtimes.rs
tests/: execution_handles_test.rs  gzip_test.rs  logfire_integration_test.rs  observation_test.rs  responses_api_test.rs  resumable_test.rs  runner_resources_test.rs  span_attributes_test.rs
tests/fixtures/: chat_completion_response.json  streaming_chat_completion.txt  tool_call_final_response.json  tool_call_response.json
tests/snapshots/: logfire_integration_test__dual_export_observation.snap  logfire_integration_test__dual_export_tool_call_pipeline.snap  logfire_integration_test__logfire_error_handling.snap  logfire_integration_test__logfire_generation_span.snap  logfire_integration_test__logfire_nested_spans.snap  logfire_integration_test__logfire_observation_tool_call.snap  logfire_integration_test__logfire_traced_chat_completion.snap  logfire_integration_test__logfire_traced_tool_call.snap  observation_test__generation_observation_sets_request_attributes.snap  observation_test__generation_with_wiremock.snap  observation_test__span_observation.snap  observation_test__streaming_generation_with_wiremock.snap  observation_test__tool_call_with_wiremock.snap  responses_api_test__encrypted_reasoning_has_signature.snap  responses_api_test__mcp_deepwiki_produces_spans.snap  responses_api_test__reasoning_summary_has_content.snap  span_attributes_test__gen_ai_attributes_with_wiremock.snap
