[package]
name = "introspection-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Introspection — continuously improve your AI systems with production feedback and frontier practices"
license = "Apache-2.0"
repository = "https://github.com/introspection-org/introspection-rust-sdk"
keywords = ["ai", "llm", "opentelemetry", "otlp", "introspection"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

# docs.rs builds with all features so intra-doc links to the
# `otel`-gated surface (IntrospectionLogs, IntrospectionSpanProcessor)
# resolve correctly.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default: REST-only runner client (tasks / files / shares / reads).
# Add the `otel` feature for the OTLP exporter, `track` / `feedback` /
# `identify`, the span processor, observation helpers, and the LLM SDK
# instrumentation (which all live behind `otel`).
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]
# Optional Apache Arrow IPC decode for the runner-scoped Data-Plane telemetry
# reads (`conversations` / `events`). Off by default so REST-only installs
# don't pull the (heavy) Arrow dependency tree; enable to use the
# `list_arrow` variants that request the `application/vnd.apache.arrow.stream`
# response and decode it into `RecordBatch`es.
arrow = ["dep:arrow"]
testing = ["otel", "opentelemetry_sdk/testing"]
openai = ["otel", "dep:async-openai"]

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["rt-multi-thread", "sync", "time", "macros"] }

# OpenTelemetry — gated by the `otel` feature so REST-only installs don't pull them.
opentelemetry = { version = "0.32.0", default-features = false, features = ["logs", "trace"], optional = true }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["rt-tokio", "logs", "trace"], optional = true }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["logs", "trace", "http-proto", "reqwest-blocking-client"], optional = true }

# HTTP client — async + multipart + streaming for the REST API; `blocking`
# is required by the OTLP `reqwest-blocking-client` exporter under the
# `otel` feature (the BatchSpanProcessor runs on a non-tokio thread).
# Pinned to 0.13 to match opentelemetry-otlp 0.32 (avoids a duplicate
# reqwest in the dep graph and the resulting HttpClient trait-bound
# mismatch).
# `gzip` makes the client advertise `Accept-Encoding: gzip` and decompress
# responses transparently — the DP gateway compresses JSON when offered
# (Arrow stream responses are never compressed and arrive unchanged).
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "multipart", "query", "stream", "rustls", "rustls-native-certs", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1.22", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
bytes = "1"
async-stream = "0.3"
mime_guess = "2"

# Builder pattern support — used by `ClientConfig` (REST) and
# `IntrospectionLogs` (otel) builders alike.
derive_builder = "0.20"

# Optional: async-openai integration (requires `otel`)
async-openai = { version = "0.41", features = ["chat-completion", "responses"], optional = true }

# Optional: Apache Arrow IPC-stream decode for the telemetry reads (gated by
# the `arrow` feature). `ipc` alone keeps the dependency tree lean — no
# csv/json/prettyprint/pyarrow.
arrow = { version = "59", default-features = false, features = ["ipc"], optional = true }

# Streaming support (StreamExt for async-openai streams)
futures = "0.3"

# Load .env files for examples and integration tests
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
insta = { version = "1", features = ["json", "redactions"] }
wiremock = "0.6"
flate2 = "1"
async-openai = { version = "0.41", features = ["chat-completion"] }
dotenvy = "0.15"

[[example]]
name = "runtimes"
path = "examples/api/runtimes.rs"

[[example]]
name = "openai_tool_call"
path = "examples/otel/openai_tool_call.rs"
required-features = ["openai"]

[[example]]
name = "openai_streaming"
path = "examples/otel/openai_streaming.rs"
required-features = ["openai"]

[[example]]
name = "responses_api_features"
path = "examples/otel/responses_api_features.rs"
required-features = ["openai"]

# Linting configuration
# Run: cargo clippy -- -W clippy::all -W clippy::pedantic
# Or use: cargo clippy --all-targets -- -W warnings
